# ksim

./: .darglint  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  MANIFEST.in  MUJOCO_LOG.TXT  Makefile  README.md  environment.yaml  play.py  pyproject.toml  setup.py  train.ipynb  train.py  tutorial_replication.ipynb
.github/workflows/: publish.yml  test.yml  update_s3_model.yml
.mypy_cache/3.9/: __future__.data.json  __future__.meta.json  __main__.data.json  __main__.meta.json  _ast.data.json  _ast.meta.json  _bisect.data.json  _bisect.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _locale.data.json  _locale.meta.json  _lsprof.data.json  _lsprof.meta.json  _markupbase.data.json  _markupbase.meta.json  _operator.data.json  _operator.meta.json  _random.data.json  _random.meta.json  _socket.data.json  _socket.meta.json  _stat.data.json  _stat.meta.json  _thread.data.json  _thread.meta.json  _tkinter.data.json  _tkinter.meta.json  _warnings.data.json  _warnings.meta.json  _weakref.data.json  _weakref.meta.json  (+206 more)
docker/: Dockerfile  docker-compose.yml  run-dev.sh  run_training.sh
envs/: __init__.py
envs/default_humanoid/: default_humanoid.py  rewards.py
envs/default_humanoid_env/: default_humanoid.py  rewards.py
envs/stompy_env/: rewards.py  stompy.py
examples/: README.md  deploy.py  jumping.py  pseudo_ik.py  standing.py  walking.py  walking_amp.py  walking_cnn.py  walking_delta.py  walking_gait_matching.py  walking_reference_motion.py  walking_rmm.py  walking_rnn.py  walking_rnn_ts.py  walking_ssm.py  walking_student.py  walking_teacher_student.py  walking_transformer.py  walking_ts.py
examples/cartpole/: cartpole_env.py  cartpole_task.py
examples/data/: 01-normal-walk.bvh  move_run_m.bvh  reference_motion.npz  run-m1s.bvh  run-m2l.bvh  run-slidestop-m3e.bvh  scene.mjcf  (+3 more)
experiments/: default_humanoid_walk.yaml  stompy_walk.yaml
kscale_sim_library.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ksim/: __init__.py  actions.py  actuators.py  commands.py  curriculum.py  dataset.py  debugging.py  distributions.py  engine.py  env.py  events.py  filters.py  loggers.py  losses.py  model.py  noise.py  normalization.py  observation.py  randomization.py  reference_motion.py  requirements-dev.txt  requirements-eval.txt  requirements.txt  resets.py  rewards.py  scales.py  terminations.py  train.py  types.py  viewer.py  vis.py
tests/: conftest.py  test_commands.py  test_distributions.py  test_dummy.py  test_examples_training.py  test_export_zero_actor.py  test_mjx_engine.py  test_observation.py  test_ppo.py  test_randomization.py  test_randomizations.py  test_resets.py  test_rewards.py  test_rollout.py  test_terminations.py  test_training_e2e.py  test_xml_speed.py
utils/: default.py  rollouts.py
weights/:  default_humanoid_walk.pkl  default_humanoid_walk.pkl  stompy_walk.pkl
(+2263 files in other folders)
