[project]
name = "ksim"
description = "A modular and easy-to-use framework for training policies in simulation."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dynamic = ["version"] # TODO: update from __version__ dynamically later
authors = [
  { name = "K-Scale Labs" }
]
dependencies = [
  # Utilities
  "numpy",
  "matplotlib",
  "tqdm",
  "tabulate",

  # K-Scale CLI
  "kscale",

  # JAX ecosystem
  "jax",
  "optax",
  "distrax",
  "xax",
  "scipy",
  "mediapy",

  # Physics engines
  "mujoco",
  "mujoco-mjx",
  # "mujoco-scenes",  # Optional

  # Viewer and visualization
  "kmv",

  # Priors and motion
  "bvhio",
  "pyglm"
]

[project.urls]
Homepage = "https://github.com/kscalelabs/ksim"

[project.optional-dependencies]
dev = [
  "pytest",
  "mypy",
  "ruff",
]


[project.scripts]
ksim-generate-reference = "ksim.utils.priors:main"
ksim-visualize-reference = "ksim.utils.priors:vis_entry_point"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ksim*"]

[tool.setuptools.dynamic]
version = {attr = "ksim.__version__"}

# -----------------------------
# Pytest Configuration
# -----------------------------
[tool.pytest.ini_options]
addopts = "-rx -rf -x -q --full-trace"
testpaths = ["tests"]
markers = [
  "slow: Marks test as being slow",
]

# -----------------------------
# Mypy Configuration
# -----------------------------
[tool.mypy]
pretty = true
show_column_numbers = true
show_error_context = true
show_error_codes = true
show_traceback = true
disallow_untyped_defs = true
strict_equality = true
allow_redefinition = true
warn_unused_ignores = true
warn_redundant_casts = true
incremental = true
namespace_packages = false
exclude = "run_\\d"

[[tool.mypy.overrides]]
module = [
  "_pytest.*",
  "distrax.*",
  "equinox.*",
  "glfw.*",
  "mujoco.*",
  "optax.*",
  "scipy.*",
  "bvhio.*",
  "glm.*",
  "imageio.*",
]
ignore_missing_imports = true

# -----------------------------
# Ruff Configuration
# -----------------------------
[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.ruff.lint]
select = [
  "ANN", "B", "D", "E", "F", "G", "I", "N", "PGH",
  "PLC", "PLE", "PLR", "PLW", "W"
]
ignore = [
  # Ignore missing docstrings
  "D101", "D102", "D103", "D104", "D105", "D106", "D107",
  # Naming conventions
  "N812", "N817", "N806", "N803",
  # Complexity warnings
  "PLR0911", "PLR0912", "PLR0913", "PLR0915", "PLR2004",
  # Global assignments and late bindings
  "PLW0603", "PLW2901",
]

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.lint.isort]
known-first-party = ["ksim", "tests"]
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "google"
